fix: BOUND BALL GAME - VIEW MODAL OVERFLOW SCROLL => AUTO

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@
 .width-90 {width: 90%;}
 .score {display: inline-block; width : 60%; text-align: left;}
 .life {display: inline-block; width : 40%; text-align: right;}
-.modal-body {height: 500px; overflow: scroll;}
+.modal-body {height: 500px; overflow: auto;}
 
 /* content */
 
